[package]
name = "actix_test"
version = "0.1.0"
authors = ["Jaclyn Brockschmidt <jcbrockschmidt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0-alpha.2"
actix-rt = "1.1.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
